# cutie-browser

./: .gitignore  Browser.qml  CMakeLists.txt  README.md  browser.qml  cutie-browser.desktop  cutie-browser.pro  main.cpp  main.qml  qml.qrc
debian/: control  cutie-browser.install
src/: main.cpp
src/qml/: main.qml
